[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Data_Analysis"
version = "0.0.1"
description = "A Corpus Based NLP Framework for Thematic Analysis of English Climate Documents and Policies in Africa."
authors = [
  { name = "Project012" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Data_Analysis"]
include = ["pyproject.toml", "Data_Analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Data_Analysis"]
force-sort-within-sections = true

